cmake_minimum_required(VERSION 3.16)
project(algorithm)

set(CMAKE_CXX_STANDARD 14)

#add_executable(algorithm backjoon/backjoon_11054.cpp)
#add_executable(blog/stack.cpp)
#add_executable(algorithm blog/stack_encapsulation.cpp)
#add_executable(algorithm blog/data_structure/queue/linear_queue.cpp)
#add_executable(algorithm blog/data_structure/queue/circular_queue.cpp)
#add_executable(algorithm blog/data_structure/linkedlist/singly_linked_list.cpp)
add_executable(algorithm blog/data_structure/linkedlist/doubly_linked_list.cpp)
#add_executable(algorithm backjoon_1932.cpp backjoon_11054.cpp)
#add_executable(algorithm main.cpp studnet.cpp studnet.h loop.cpp loop.h adjacency_list.cpp)